UtilsPrint/LocalMinimaMaxima/build: add helpful static class UtilsPrint for helpful functions regarding printing
Created the helpful function PrintVector() to print the elements of a
vector.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,8 @@ add_executable(LocalMinimaMaxima
     LocalMinimaMaxima.h
     LocalMinimaMaxima.cpp
     main.cpp
+    UtilsPrint.h
+    UtilsPrint.cpp
 )
 target_link_libraries(LocalMinimaMaxima)
 
